Fix shellcheck